--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "worker": "node worker.js" ,
+    "worker": "node cronJob.js" ,
     "dev": "nodemon server.js"
   },
   "keywords": [],
